--- a/Index.html
+++ b/Index.html
@@ -5,10 +5,9 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
-<p>A new line in our file!</p>
+<p>This show how emerging works!</p>
 
 </body>
 </html>
