--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,8 @@
 
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
+<div><img src="abc.jpg" alt="Hello World from Space"
+    style="width:100%;max-width:360px"></div>
 
 </body>
 </html>
