--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,9 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div><img src="abc.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
-
+<div><img src="def.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
 </body>
 </html>
